# epdoptimize

./: .gitignore  BUILD_AND_TEST_INSTRUCTIONS.md  IMPLEMENTATION_SUMMARY.md  INSTALL_CANVAS.md  QUICKSTART.md  README.md  RMSE_ANALYSIS.md  RUST_IMPLEMENTATION_COMPLETE.md  RUST_REWRITE_PLAN.md  STATUS.md  TEST_COVERAGE_ANALYSIS.md  TEST_PLAN.md  compare_with_js.js  package-lock.json  package.json  test_algorithms.sh  vitest.config.ts  vitest.setup.ts
epd-dither/: .gitignore  Cargo.toml  README.md
epd-dither/src/: lib.rs  main.rs
epd-dither/src/color/: convert.rs  distance.rs  mod.rs  palette.rs  tests.rs
epd-dither/src/data/: device_colors.json  devices.json  palettes.json
epd-dither/src/device/: mod.rs
epd-dither/src/dither/: engine.rs  matrices.rs  mod.rs
epd-dither/src/dither/algorithms/: error_diffusion.rs  mod.rs  ordered.rs  random.rs
epd-dither/src/scaling/: mod.rs
epd-dither/tests/: integration_test.rs
src/: index.test.ts
src/dither/: dither.test.ts
src/dither/data/: diffusion-maps.test.ts  diffusion-maps.ts
src/dither/functions/: bayer-matrix.test.ts  color-helpers.test.ts  find-closest-palette-color.test.ts  utilities.test.ts
src/replaceColors/: replaceColors.test.ts
