[package]
name = "epd-dither"
version = "0.1.0"
edition = "2021"
authors = ["EPD Optimize Team"]
description = "A fast CLI tool for dithering images for e-ink/e-paper displays"
license = "Apache-2.0"
repository = "https://github.com/Utzel-Butzel/epdoptimize"

[[bin]]
name = "epd-dither"
path = "src/main.rs"

[lib]
name = "epd_dither"
path = "src/lib.rs"

[dependencies]
image = "0.24"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
